--- a/fe/Cargo.toml
+++ b/fe/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-curve25519-dalek = { version = "5.0.0-pre.5", features = ["ff", "group", "rand_core"], optional = true }
+curve25519-dalek = { version = "5.0.0-pre.5", features = ["ff", "group", "rand_core", "serde"], optional = true }
 malachite = { version = "0.9.1", default-features = false, features = ["naturals_and_integers", "random"], optional = true}
 cfg-if = "1.0.4"
 rand = { version = "0.10.0-rc.8" }
 lazy_static = { version = "1.5.0", optional = true }
+serde = { version = "1.0.228", features = ["alloc", "serde_derive"] }
+serde-big-array = "0.5.1"
 
 [dev-dependencies]
 proptest = "1.9.0"
