--- a/compute_server/Cargo.toml
+++ b/compute_server/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
-name = "instance-server"
+name = "compute_server"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0.101"
-bytes = "1.11.1"
 env_logger = "0.11.8"
 fe = { version = "0.1.0", path = "../fe" }
-futures = "0.3.31"
 fuzzy_hashes = { version = "0.1.0", path = "../fuzzy_hashes" }
 log = "0.4.29"
 messages = { version = "0.1.0", path = "../messages" }
-postcard = { version = "1.1.3", features = ["alloc"] }
+postcard = { version = "1.1.3", features = ["use-std"] }
 rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
-tokio-serde = { version = "0.9.0", features = ["bincode"] }
-tokio-stream = { version = "0.1.18", features = ["full"] }
-tokio-util = { version = "0.7.18", features = ["codec", "net", "rt"] }
+clap = { version = "4.5.57", features = ["derive"] }
+rusqlite = { version = "0.38.0", features = ["bundled"] }
+tokio-util = { version = "0.7.18", features = ["codec"] }
+futures = "0.3.31"
