--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compute-server"
+name = "client"
 version = "0.1.0"
 edition = "2024"
 
@@ -12,8 +12,7 @@ log = "0.4.29"
 messages = { version = "0.1.0", path = "../messages" }
 postcard = { version = "1.1.3", features = ["use-std"] }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
-clap = { version = "4.5.57", features = ["derive"] }
-rusqlite = { version = "0.38.0", features = ["bundled"] }
 tokio-util = { version = "0.7.18", features = ["codec"] }
 futures = "0.3.31"
-comparator = { version = "0.1.0", path = "../comparator" }
+clap = { version = "4.5.57", features = ["derive"] }
+rand = "0.10.0"
